Small spacing issue fixed

--- a/app/css/bootstrap_customization.css.scss
+++ b/app/css/bootstrap_customization.css.scss
@@ -12,6 +12,11 @@
   }
 }
 
+//Alert
+.alert{
+  margin-bottom:0;
+}
+
 // Visiblity
 .visible-desktop{
   display:block !important;
